# husky-cuarl

husky_description/: 60.env-hook.sh  CMakeLists.txt
husky_description/launch/: description.launch
husky_description/meshes/: red_bowler.dae
husky_description/urdf/: custom_description.urdf.xacro  husky.urdf.xacro
husky_gazebo/: 60.env-hook.sh  CMakeLists.txt
husky_gazebo/launch/: husky_empty_world.launch  spawn_husky.launch
husky_gazebo/urdf/: custom_description.gazebo.xacro
